Style resume with own CSS

--- a/css/style.css
+++ b/css/style.css
@@ -104,11 +104,11 @@ a {
   display: none;
 }
 
-.orange {
+.connect {
   background: linear-gradient(to bottom right, #21058C, #136F05);
 }
 
-.orange-text {
+.connect-text {
   color: #1199C3;
 }
 
